more css updates:   - ensure that included xowiki pages don't overlap with surrunding div   - get rid of <hr>   - made html-footer more compact

--- a/www/resources/xowiki.css
+++ b/www/resources/xowiki.css
@@ -160,6 +160,14 @@ div.activity-graph div {font-size: 85%;}
 
 div.news-item {clear: both; border: 1px solid #a9a9a9; padding: 15px 15px; margin: 10px 10px; background: #f8f8f8;}
 div.news-item h2 {display: inline; font-weight: bolder;}
-div.news-item .footer {margin-left: 20px; margin-right: 20px;}
+/*div.xowiki-content div.news-item .item-footer {margin-left: 20px; margin-right: 20px;}*/
 
-div.xowiki-content .footer {clear: both; text-align: left; font-size: 85%;}
+div.xowiki-content .item-footer {
+    clear: both; 
+    text-align: left; font-size: 85%; 
+    margin-left: 10px; margin-right: 10px; margin-top: 5px;
+    padding-top: 5px;
+    border-top: 1px solid; border-color: #c8c8c8; 
+    color: #555555; 
+}
+div.xowiki-content .content-chunk-footer {clear: both;}
